# Digit-Recognition-Password-Lock

./: lock_config.json  project.ipynb  pyproject.toml
